# galsky-test

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  ram_budget.hpp  telemetry_publisher.hpp
core/: CMakeLists.txt
core/include/core/: ring_buffer.hpp  ring_buffer_overwrite.hpp  scheduler.hpp  task.hpp  topic.hpp
modules/: CMakeLists.txt
modules/archive/: CMakeLists.txt
modules/archive/include/modules/archive/: archive.hpp
modules/can_bus/: CMakeLists.txt
modules/can_bus/include/modules/can_bus/: can_bus.hpp
modules/config_store/: CMakeLists.txt
modules/config_store/include/modules/config_store/: config_store.hpp
modules/diagnostics/: CMakeLists.txt
modules/diagnostics/include/modules/diagnostics/: diagnostics.hpp
modules/geofence_engine/: CMakeLists.txt
modules/geofence_engine/include/modules/geofence_engine/: geofence_engine.hpp
modules/gps/: CMakeLists.txt
modules/gps/include/modules/gps/: gps.hpp
modules/power_mgmt/: CMakeLists.txt
modules/power_mgmt/include/modules/power_mgmt/: power_mgmt.hpp
modules/script_interpreter/: CMakeLists.txt
modules/script_interpreter/include/modules/script_interpreter/: script_interpreter.hpp
modules/sensors/: CMakeLists.txt
modules/sensors/include/modules/sensors/: sensors.hpp
modules/uplink/: CMakeLists.txt
modules/uplink/include/modules/uplink/: uplink.hpp
msg/: CMakeLists.txt
msg/include/msg/: messages.hpp  record_source.hpp  topics.hpp
platform/: CMakeLists.txt
platform/desktop/: CMakeLists.txt  clock_hal_desktop.cpp  net_hal_desktop.cpp
platform/include/platform/: clock_hal.hpp  net_hal.hpp
platform/mcu_stub/: CMakeLists.txt  clock_hal_mcu.cpp  net_hal_mcu.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/app/: test_telemetry_publisher.cpp
tests/core/: test_ring_buffer.cpp  test_ring_buffer_overwrite.cpp  test_scheduler.cpp  test_topic.cpp
tests/integration/: test_end_to_end.cpp
tests/modules/: test_archive.cpp  test_diagnostics.cpp  test_geofence.cpp  test_gps_sim.cpp  test_sensors.cpp  test_uplink.cpp
